Small icon bug fix

--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -221,7 +221,7 @@ html {
                         }
                     }                        
                     
-                    #download #set-dow-text {
+                    #download, #download #set-dow-text {
                         display: none;
                     }
                     #download:hover #set-dow-text {
