--- a/REWORK/src/stylesheet/main/main/main.scss
+++ b/REWORK/src/stylesheet/main/main/main.scss
@@ -269,7 +269,7 @@ html body {
                     bottom: 40px;
                     width: 310px;
                     height: 30px;
-                    img {
+                    #settingsIcon {
                         margin-top: 5px;
                         margin-left: -1px;
                     }
