--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -351,6 +351,30 @@ html body #error-banner {
 html body #error-banner #error-icon {
   background-color: var(--error-banner-icon);
 }
+html body #error-banner #error-button-hide {
+  display: none;
+  position: absolute;
+  top: 8px;
+  right: 50px;
+  width: 100px;
+  height: 30px;
+  border: none;
+  outline: none;
+  background: none;
+  border-radius: 2px;
+  color: var(--text-color);
+  background-color: var(--error-banner-button);
+  cursor: pointer;
+  transition: 0.2s;
+}
+html body #error-banner #error-button-hide:hover {
+  opacity: 0.9;
+  transition: 0.2s;
+}
+html body #error-banner #error-button-hide:active {
+  opacity: 0.75;
+  transition: 0.2s;
+}
 html body #error-banner-wifi {
   background-color: var(--error-banner-bg);
 }
